<resources>
    <string name="app_name">Portfolio</string>
    <string name="profile_image_desc">Profile picture</string>
    <string name="name_text">Hi, this is Kenji</string>
    <string name="welcome_text">Welcome to my page! I\'m a developer passionate about creating amazing Android applications.</string>
    <string name="about_me">About Me</string>
    <string name="about_description">I love coding, designing user interfaces, and exploring new technologies. Let\'s connect and create something amazing together!</string>
    <string name="followers">Followers</string>
    <string name="posts">Posts</string>
    <string name="contact">Contact</string>
    <string name="follow">Follow</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="instagram">Instagram</string>
    <string name="linkedin">LinkedIn</string>
    <string name="this_is_the_skills_page">this is the skills page 😒</string>
</resources>